2007-05-04  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/Common/UIxAclEditor.m ([UIxAclEditor -currentUserIsOwner]):
	new method with an explicit name.

2007-05-03  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/Appointments/SOGoCalendarComponent.m
	([SOGoCalendarComponent -isOrganizerOrOwner:user]): new method
	replacing "isOrganizer:orOwner:" by taking only one instance of
	SOGoUser as parameter.
	([SOGoCalendarComponent -participant:user]): new method replacing
	the previous "isParticipant" boolean method by returning the first
	participant matching the user passed as parameter. This method is
	used so that both the regular email address and the "system email
	address" of the user are matched against the participants emails.

	* SoObjects/SOGo/AgenorUserManager.m ([AgenorUserManager
	-getSystemEMailForUID:uid]): new method that returns the email
	formed with the user's uid and the default mail domain.

	* SoObjects/Appointments/SOGoCalendarComponent.m
	([SOGoCalendarComponent -rolesOfUser:login]): removed method that
	was previously commented out.

	* SoObjects/SOGo/SOGoUser.m ([SOGoUser -systemEmail]): new method
	forwared to [AgenorUserManager getSystemEmailForUID:].

	* UI/Scheduler/UIxComponentEditor.m ([UIxComponentEditor
	-toolbar]): method replacing the one with the same name in the
	task and appointment editor classes. This method makes also use of
	the new method "isOrganizerOrOwner:" and "participant:" in
	SOGoCalendarComponent.

	* UI/Scheduler/UIxAppointmentEditor.m ([UIxAppointmentEditor
	-toolbar]): removed method, replaced with a method with the same
	name in UIxComponentEditor.

	* UI/Scheduler/UIxTaskEditor.m ([UIxTaskEditor -toolbar]): removed
	method, replaced with a method with the same name in
	UIxComponentEditor.

	* SoObjects/SOGo/AgenorUserDefaults.m ([AgenorUserDefaults
	-primaryFetchProfile]): the values returned from the database are
	converted to a put dictionary first, since the dictionary returned